--- a/PIA/PIA_MODELO-2.ipynb
+++ b/PIA/PIA_MODELO-2.ipynb
@@ -125,7 +125,7 @@
         "id": "fyrM6hvET7ms"
       },
       "source": [
-        "Aqui ya se comienza a crear la red neuronal convolusional, en donde se extraen caracteristicas y modificando un poco las imagenes inciales, guardando capa por capa de nuestro modelo secuencial en la variable model. En este modelo se utilizaron 4 capas de Conv2D con filtro de (3,3), con diferente numero de neuronas cada una y la función de activación relu y 4 capas de MaxPooling2D con un filtro de (2,2). Finalemente, se imprimió el resumen de las capas que tiene nuestra red."
+        "Aqui ya se comienza a crear la red neuronal convolucional, en donde se extraen caracteristicas y modificando un poco las imagenes inciales, guardando capa por capa de nuestro modelo secuencial en la variable model. En este modelo se utilizaron 4 capas de Conv2D con filtro de (3,3), con diferente numero de neuronas cada una y la función de activación relu y 4 capas de MaxPooling2D con un filtro de (2,2). Finalemente, se imprimió el resumen de las capas que tiene nuestra red."
       ]
     },
     {
@@ -200,7 +200,7 @@
         "id": "hZGPIak5Xb-j"
       },
       "source": [
-        "Para poder completar el modelo se deben de agregar capas densas. Se agrego una capa de Flatten, la cual nos aplana los pixeles de las imagenes para crear un solo arreglo unideminsional. Luego se agregaron dos capas densas la primera de 128 neuronas con la activación relu y la capa densa de salida con 20 neuronas ya que solo hay 20 superclases sin función de activación. Finalmente, se imprimió el resumen de la estructura de la red neuronal convolusional. "
+        "Para poder completar el modelo se deben de agregar capas densas. Se agrego una capa de Flatten, la cual nos aplana los pixeles de las imagenes para crear un solo arreglo unideminsional. Luego se agregaron dos capas densas la primera de 128 neuronas con la activación relu y la capa densa de salida con 20 neuronas ya que solo hay 20 superclases sin función de activación. Finalmente, se imprimió el resumen de la estructura de la red neuronal convolucional. "
       ]
     },
     {
@@ -377,7 +377,7 @@
         "id": "kziKeX4-bUrC"
       },
       "source": [
-        "Finalemente, se imprimio la exactitud general de toda la red neuronal convolusional."
+        "Finalemente, se imprimio la exactitud general de toda la red neuronal convolucional."
       ]
     },
     {
